[gd_scene load_steps=28 format=3 uid="uid://c4750awc1ab7v"]

[ext_resource type="Script" path="res://Scripts/Player/CameraController.gd" id="1_hy0sl"]
[ext_resource type="Script" path="res://addons/gaea/generators/2D/walker_generator/walker_generator.gd" id="1_jk5ye"]
[ext_resource type="Script" path="res://addons/gaea/renderers/2D/tilemap_gaea_renderer.gd" id="2_4lwx6"]
[ext_resource type="Script" path="res://addons/gaea/generators/2D/walker_generator/walker_generator_settings.gd" id="2_pin0w"]
[ext_resource type="Script" path="res://addons/gaea/modifiers/2D/fill.gd" id="3_5xu21"]
[ext_resource type="PackedScene" uid="uid://cn1nurp7ed2dy" path="res://Scenes/Test Exit.tscn" id="3_cq828"]
[ext_resource type="Script" path="res://addons/gaea/tile_info/tilemap_tile_info.gd" id="3_s0is7"]
[ext_resource type="Script" path="res://addons/gaea/modifiers/2D/remove_disconnected.gd" id="6_kceoa"]
[ext_resource type="Script" path="res://addons/gaea/modifiers/2D/smooth.gd" id="6_muai2"]
[ext_resource type="TileSet" uid="uid://b4reh0vqljbro" path="res://Tilesets/KenneyNL Tiny Dungeon.tres" id="8_sxclt"]
[ext_resource type="Script" path="res://Scripts/Dungeon/Dungeon Controller/DungeonController.gd" id="8_xukfm"]
[ext_resource type="Script" path="res://Scripts/Dungeon/Dungeon Controller/DC States/GenerateDungeon.gd" id="9_aangx"]
[ext_resource type="PackedScene" uid="uid://q8a2c3hpyhwq" path="res://Scenes/Characters/Player Template.tscn" id="9_hk5gu"]
[ext_resource type="PackedScene" uid="uid://o3iblyhcftgw" path="res://Scenes/Characters/Ally Template.tscn" id="10_5qicd"]
[ext_resource type="PackedScene" uid="uid://2ch8sntks6kk" path="res://Scenes/Characters/Character Template.tscn" id="11_jeiyu"]
[ext_resource type="Script" path="res://Scripts/Dungeon/Pathfinder.gd" id="11_o3ny8"]
[ext_resource type="Script" path="res://Scripts/Dungeon/TurnController.gd" id="16_8vqvc"]
[ext_resource type="Script" path="res://Scripts/Dungeon/Dungeon Controller/DC States/DungeonRunning.gd" id="16_ah4ou"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerDungeonController.gd" id="17_juqlf"]
[ext_resource type="Script" path="res://Scripts/Dungeon/DeathHandler.gd" id="20_4bkj3"]
[ext_resource type="PackedScene" uid="uid://bdmomd3ugv8mm" path="res://Scenes/UI/Player Dungeon HUD.tscn" id="21_ww2of"]

[sub_resource type="Resource" id="Resource_62wv1"]
script = ExtResource("3_s0is7")
type = 1
tilemap_layer = 0
terrain_set = 0
terrain = 2
id = ""
layer = 0

[sub_resource type="Resource" id="Resource_6c213"]
script = ExtResource("3_5xu21")
tile = SubResource("Resource_62wv1")
expand_left = 20
expand_top = 20
expand_right = 20
expand_bottom = 20
affected_layers = Array[int]([0])
filter_type = 0

[sub_resource type="Resource" id="Resource_uyr62"]
script = ExtResource("6_kceoa")
starting_cell = Vector2i(0, 0)
affected_layers = Array[int]([0])
filter_type = 0

[sub_resource type="Resource" id="Resource_76bkm"]
script = ExtResource("6_muai2")
iterations = 2
maximum_empty_neighbors = 4
affected_layers = Array[int]([0])
filter_type = 0

[sub_resource type="Resource" id="Resource_2iunr"]
script = ExtResource("3_s0is7")
type = 1
tilemap_layer = 0
terrain_set = 0
terrain = 0
id = ""
layer = 0

[sub_resource type="Resource" id="Resource_spduq"]
resource_name = "Settings"
script = ExtResource("2_pin0w")
tile = SubResource("Resource_2iunr")
fullness_check = 0
max_tiles = 500
constrain_world_size = false
max_walkers = 5
new_dir_chance = 0.1
new_walker_chance = 0.05
destroy_walker_chance = 0.05
room_chances = {
Vector2i(2, 2): 0.5,
Vector2i(3, 3): 0.2
}
modifiers = Array[Resource("res://addons/gaea/modifiers/2D/modifier_2d.gd")]([SubResource("Resource_6c213"), SubResource("Resource_uyr62"), SubResource("Resource_76bkm")])

[node name="Dungeon" type="Node2D"]

[node name="CameraController" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
script = ExtResource("1_hy0sl")

[node name="WalkerGenerator" type="Node" parent="."]
script = ExtResource("1_jk5ye")
settings = SubResource("Resource_spduq")
starting_tile = Vector2(1, 1)
editor_preview = true
generate_on_ready = false

[node name="TilemapGaeaRenderer" type="Node" parent="." node_paths=PackedStringArray("tile_map", "generator")]
script = ExtResource("2_4lwx6")
tile_map = NodePath("../TileMap")
generator = NodePath("../WalkerGenerator")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("8_sxclt")
format = 2
layer_0/name = "Floor"
layer_0/y_sort_enabled = true
layer_1/name = "Walls"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Ceiling"
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 5
layer_2/tile_data = PackedInt32Array()

[node name="DungeonController" type="Node" parent="." node_paths=PackedStringArray("walker_generator", "tile_map", "pathfinder", "camera_controller", "turn_controller", "player_dungeon_controller", "death_handler")]
script = ExtResource("8_xukfm")
walker_generator = NodePath("../WalkerGenerator")
character_template = ExtResource("11_jeiyu")
player_template = ExtResource("9_hk5gu")
ally_template = ExtResource("10_5qicd")
tile_map = NodePath("../TileMap")
pathfinder = NodePath("../Pathfinder")
camera_controller = NodePath("../CameraController")
turn_controller = NodePath("../TurnController")
player_dungeon_controller = NodePath("../PlayerDungeonController")
death_handler = NodePath("../DeathHandler")
initial_state = NodePath("GenerateDungeon")

[node name="GenerateDungeon" type="Node" parent="DungeonController"]
script = ExtResource("9_aangx")
test_exit = ExtResource("3_cq828")

[node name="DungeonRunning" type="Node" parent="DungeonController"]
script = ExtResource("16_ah4ou")

[node name="DeathHandler" type="Node" parent="."]
script = ExtResource("20_4bkj3")

[node name="Pathfinder" type="Node" parent="." node_paths=PackedStringArray("tile_map")]
script = ExtResource("11_o3ny8")
tile_map = NodePath("../TileMap")

[node name="TurnController" type="Node" parent="." node_paths=PackedStringArray("death_handler")]
script = ExtResource("16_8vqvc")
death_handler = NodePath("../DeathHandler")

[node name="PlayerDungeonController" type="Node" parent="." node_paths=PackedStringArray("camera_controller", "tile_map")]
script = ExtResource("17_juqlf")
camera_controller = NodePath("../CameraController")
tile_map = NodePath("../TileMap")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Player Dungeon HUD" parent="CanvasLayer" instance=ExtResource("21_ww2of")]
